--- a/eclipse-tools/pom.xml
+++ b/eclipse-tools/pom.xml
@@ -13,7 +13,7 @@
 	<parent>
 		<artifactId>orika-parent</artifactId>
 		<groupId>ma.glasnost.orika</groupId>
-		<version>1.4.6npefix</version>
+		<version>1.4.6npefix1</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
