--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>ma.glasnost.orika</groupId>
 	<artifactId>orika-parent</artifactId>
 	<name>Orika - parent</name>
-	<version>1.4.6npefix</version>
+	<version>1.4.6npefix1</version>
 	<packaging>pom</packaging>
 
 	<parent>
